; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_crc32.c_calc_crc32.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_crc32.c_calc_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crc32_tab = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @calc_crc32(i64 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i64, i64* %4, align 8
  %11 = xor i64 %10, -1
  store i64 %11, i64* %4, align 8
  br label %12

12:                                               ; preds = %16, %3
  %13 = load i64, i64* %6, align 8
  %14 = add i64 %13, -1
  store i64 %14, i64* %6, align 8
  %15 = icmp ne i64 %13, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %12
  %17 = load i64*, i64** @crc32_tab, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %7, align 8
  %21 = load i32, i32* %19, align 4
  %22 = sext i32 %21 to i64
  %23 = xor i64 %18, %22
  %24 = and i64 %23, 255
  %25 = getelementptr inbounds i64, i64* %17, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %4, align 8
  %28 = lshr i64 %27, 8
  %29 = xor i64 %26, %28
  store i64 %29, i64* %4, align 8
  br label %12

30:                                               ; preds = %12
  %31 = load i64, i64* %4, align 8
  %32 = xor i64 %31, -1
  ret i64 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
